@@ -1,25 +1,28 @@
 package com.example.umc9th2.domain.review.converter;
 
-import com.example.umc9th2.domain.review.dto.res.ReviewSearchDTO;
 import com.example.umc9th2.domain.review.dto.req.ReviewReqDTO;
 import com.example.umc9th2.domain.review.dto.res.ReviewResDTO;
+import com.example.umc9th2.domain.review.dto.res.ReviewSearchDTO;
 import com.example.umc9th2.domain.review.entity.Review;
+import com.example.umc9th2.domain.user.entity.User;
+import com.example.umc9th2.domain.store.entity.Store;
 
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
-
+//2차 : Builder 사용
 
 public class ReviewConverter {
-   
-     //Review Entity -> ReviewSearchDTO
-     
+
+    
+ //단일 Entity -> 검색 결과 DTO
+  
     public static ReviewSearchDTO toReviewSearchDTO(Review review) {
-        return ReviewSearchDTO.builder()
-                .reviewId(review.getReviewId())
-                .username(review.getUser() != null ? review.getUser().getUsername() : null)
-                .rating(review.getRating())
-                .content(review.getContent())
-                .build();
+        return new ReviewSearchDTO(
+                review.getReviewId(),
+                review.getUser() != null ? review.getUser().getUsername() : null,
+                review.getRating(),
+                review.getContent()
+        );
     }
 
     
@@ -28,28 +31,32 @@ public class ReviewConverter {
     public static List<ReviewSearchDTO> toReviewSearchDTOList(List<Review> reviewList) {
         return reviewList.stream()
                 .map(ReviewConverter::toReviewSearchDTO)
-                .collect(Collectors.toList());
-    }
-
-    // 생성
-    // 요청 DTO->  Review Entity
-  
-    public static Review toReview(ReviewReqDTO.CreateReview request) {
-        Review review = new Review();
-        review.setRating(request.getRating());
-        review.setContent(request.getContent());
-        return review;
+                .toList();
     }
 
     
-     //Review Entity -> 응답 DTO
-    public static ReviewResDTO.CreateReview toCreateReviewDTO(Review review) {
-        return ReviewResDTO.CreateReview.builder()
-                .reviewId(review.getReviewId())
-                .username(review.getUser() != null ? review.getUser().getUsername() : null)
-                .rating(review.getRating())
-                .content(review.getContent())
-                .storeName(review.getStore() != null ? review.getStore().getStoreName() : null)
+     //리뷰 생성 요청 DTO → Review 엔티티로 변환
+    
+    
+    public static Review toEntity(ReviewReqDTO.CreateReview request, User user, Store store) {
+        return Review.builder()
+                .rating(request.rating())
+                .content(request.content())
+                .user(user)
+                .store(store)
                 .build();
+    }
+
+   // 리뷰 생성 응답 DTO
+    
+    public static ReviewResDTO.CreateReview toCreateReviewResultDto(Review review) {
+        return new ReviewResDTO.CreateReview(
+                review.getReviewId(),
+                review.getUser() != null ? review.getUser().getUsername() : null,
+                review.getRating(),
+                review.getContent(),
+                review.getStore() != null ? review.getStore().getStoreName() : null,
+                LocalDateTime.now()
+        );
     }
 }
